--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -100,6 +100,9 @@
 	.site-container {
 		@apply mx-auto w-full max-w-7xl px-2 sm:px-4;
 	}
+	.site-section {
+		@apply mx-auto w-full max-w-prose;
+	}
 	.hover-opacity {
 		@apply transition hover:opacity-75;
 	}
@@ -116,7 +119,7 @@
 		@apply inline-flex flex-wrap items-center gap-2;
 	}
 	.prose-config {
-		@apply prose prose-slate dark:prose-invert lg:prose-lg;
+		@apply prose prose-slate dark:prose-invert;
 		@apply prose-a:text-primary;
 		@apply prose-code:before:content-none prose-code:after:content-none;
 	}
