--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -3,7 +3,8 @@
 @tailwind components;
 @tailwind utilities;
 
-/* From shadcn UI Themes: https://ui.shadcn.com/themes */
+/* Get from shadcn UI Themes: https://ui.shadcn.com/themes */
+/* Or pnpx shadcn-custom-theme */
 @layer base {
   :root {
     --background: 0 0% 100% /* white */;
@@ -66,20 +67,26 @@
   h4,
   h5,
   h6 {
-    @apply leading-tight tracking-tighter text-foreground;
+    @apply font-semibold leading-tight tracking-tighter text-foreground;
     font-family: "Archivo Variable", system-ui, sans-serif;
   }
   h1 {
-    @apply text-5xl font-semibold sm:text-6xl md:text-7xl lg:text-8xl;
+    @apply text-5xl sm:text-6xl md:text-7xl lg:text-8xl;
   }
   h2 {
-    @apply text-3xl font-semibold sm:text-4xl;
+    @apply text-3xl sm:text-4xl;
   }
   h3 {
-    @apply text-2xl font-semibold sm:text-3xl;
+    @apply text-2xl sm:text-3xl;
   }
   h4 {
-    @apply text-lg font-semibold sm:text-xl;
+    @apply text-lg sm:text-xl;
+  }
+  h5 {
+    @apply text-base sm:text-lg;
+  }
+  h6 {
+    @apply text-base;
   }
 }
 
