feat: install more shadcn ui components

--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -4,6 +4,7 @@
 @tailwind utilities;
 
 /* Get from shadcn UI Themes: https://ui.shadcn.com/themes */
+
 /* Or pnpx shadcn-custom-theme */
 @layer base {
   :root {
@@ -68,6 +69,7 @@
   h5,
   h6 {
     @apply font-semibold leading-tight tracking-tighter text-foreground;
+
     font-family: "Archivo Variable", system-ui, sans-serif;
   }
   h1 {
@@ -110,6 +112,7 @@
     @apply prose-h3:font-semibold;
     @apply prose-h4:font-semibold;
     @apply prose-a:text-primary prose-a:no-underline;
+    @apply prose-pre:border prose-pre:border-input prose-pre:bg-muted;
     @apply prose-code:before:content-none prose-code:after:content-none;
   }
 }
