--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -99,20 +99,20 @@ By default Dogokit is using Tailwind CSS color: Indigo
   .site-container {
     @apply mx-auto mt-4 w-full max-w-7xl px-4;
   }
+  .site-header {
+    @apply mx-auto w-full max-w-prose space-y-4;
+  }
   .site-section {
     @apply mx-auto w-full max-w-prose;
-  }
-  .site-header {
-    @apply space-y-4;
   }
   .app-container {
     @apply mx-auto w-full p-2;
   }
+  .app-header {
+    @apply mx-auto w-full max-w-7xl space-y-2;
+  }
   .app-section {
     @apply mx-auto w-full max-w-7xl;
-  }
-  .app-header {
-    @apply space-y-2;
   }
   .prose-config {
     @apply prose prose-slate dark:prose-invert;
