--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -4,9 +4,9 @@
 @tailwind utilities;
 
 /* 
-Get from shadcn UI Themes: https://ui.shadcn.com/themes
-Or run `pnpx shadcn-custom-theme`
-By default Dogokit is using Tailwind CSS color: Indigo
+ * Get from shadcn UI Themes: https://ui.shadcn.com/themes
+ * Or run `pnpx shadcn-custom-theme`
+ * By default Dogokit is using Tailwind CSS color: Indigo
 */
 
 @layer base {
@@ -42,7 +42,7 @@ By default Dogokit is using Tailwind CSS color: Indigo
     --popover-foreground: 211 41% 99% /* slate-50 */;
     --primary: 238 73% 67% /* indigo-500 */;
     --primary-foreground: 226 100% 97% /* indigo-50 */;
-    --secondary: 243 48% 35% /* indigo-900 */;
+    --secondary: 243 48% 20% /* indigo-950 */;
     --secondary-foreground: 226 100% 97% /* indigo-50 */;
     --muted: 218 33% 18% /* slate-800 */;
     --muted-foreground: 216 21% 66% /* slate-400 */;
@@ -104,13 +104,16 @@ By default Dogokit is using Tailwind CSS color: Indigo
     @apply mx-auto w-full max-w-prose;
   }
   .app-container {
-    @apply mx-auto w-full space-y-6 p-2;
+    @apply mx-auto w-full space-y-6 overflow-hidden p-2;
   }
   .app-header {
     @apply mx-auto w-full max-w-7xl space-y-2;
   }
   .app-section {
     @apply mx-auto w-full max-w-7xl;
+  }
+  .app-sidebar {
+    @apply w-full max-w-[140px] select-none border-r border-r-border p-2 sm:max-w-[200px];
   }
   .prose-config {
     @apply prose prose-slate dark:prose-invert;
