--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -71,7 +71,7 @@
   h4,
   h5,
   h6 {
-    @apply font-heading font-semibold leading-tight tracking-tighter text-foreground;
+    @apply font-heading font-semibold text-foreground;
   }
   h1 {
     @apply text-4xl sm:text-5xl;
