--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -56,7 +56,10 @@
   }
 }
 
-/* Custom layers for default stylings */
+/*
+ * Custom layers for default stylings
+ * Feel free to remove them to reset
+ */
 @layer base {
   * {
     @apply border-border;
@@ -93,7 +96,11 @@
   }
 }
 
-@layer utilities {
+/*
+ * Custom components
+ * It's also possible to use the Tailwind classes into a component
+ */
+@layer components {
   .site-container {
     @apply mx-auto mt-4 w-full max-w-7xl px-4;
   }
@@ -102,6 +109,9 @@
   }
   .site-section {
     @apply mx-auto w-full max-w-prose;
+  }
+  .site-compact {
+    @apply mx-auto max-w-md space-y-10;
   }
   .app-container {
     @apply mx-auto w-full space-y-6 overflow-hidden p-2;
@@ -115,6 +125,12 @@
   .app-sidebar {
     @apply w-full max-w-[140px] select-none border-r border-r-border p-2 sm:max-w-[200px];
   }
+}
+
+/*
+ * Custom utilities
+ */
+@layer utilities {
   .prose-config {
     @apply prose prose-slate dark:prose-invert;
     @apply prose-h1:font-semibold;
