--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -66,7 +66,7 @@
   }
   body {
     @apply bg-background text-foreground;
-    @apply selection:bg-primary selection:text-primary-foreground;
+    @apply selection:bg-primary/30;
   }
   h1,
   h2,
@@ -127,6 +127,9 @@
   }
   .app-outlet {
     @apply w-full;
+  }
+  .input-natural {
+    @apply w-full rounded-md border-transparent bg-transparent p-0 focus:border-transparent focus:ring-0;
   }
 }
 
