--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -123,7 +123,8 @@
     @apply w-full max-w-7xl space-y-2;
   }
   .input-natural {
-    @apply w-full rounded-md border-transparent bg-transparent p-0 focus:border-transparent focus:ring-0;
+    @apply w-full rounded-md border-transparent bg-transparent p-0;
+    @apply placeholder:text-muted-foreground/30 focus:border-transparent focus:ring-0;
   }
 }
 
