feat: site navigation small and large

--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -102,7 +102,7 @@
  */
 @layer components {
   .site-container {
-    @apply mx-auto mt-4 w-full max-w-7xl px-4;
+    @apply mx-auto w-full max-w-7xl px-4 pt-10;
   }
   .site-header {
     @apply mx-auto w-full max-w-prose space-y-4;
