--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -71,10 +71,12 @@
   h1,
   h2,
   h3,
-  h4,
+  h4 {
+    @apply font-heading font-semibold text-foreground;
+  }
   h5,
   h6 {
-    @apply font-heading font-semibold text-foreground;
+    @apply font-sans font-semibold text-foreground;
   }
   h1 {
     @apply text-4xl sm:text-5xl;
