feat: example editor with tiptap and extensions

--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -136,6 +136,7 @@
 @layer utilities {
   .prose-config {
     @apply prose prose-slate dark:prose-invert;
+    @apply prose-sm sm:prose-base focus:outline-none;
     @apply prose-h1:font-semibold;
     @apply prose-h2:font-semibold;
     @apply prose-h3:font-semibold;
