--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -137,8 +137,8 @@
   .prose-config {
     @apply prose prose-slate dark:prose-invert;
     @apply prose-sm sm:prose-base focus:outline-none;
-    @apply prose-h1:font-semibold;
-    @apply prose-h2:font-semibold;
+    @apply prose-h1:mt-4 prose-h1:font-semibold;
+    @apply prose-h2:mt-2 prose-h2:font-semibold;
     @apply prose-h3:font-semibold;
     @apply prose-h4:font-semibold;
     @apply prose-a:text-primary prose-a:no-underline;
