--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -104,7 +104,7 @@
  */
 @layer components {
   .site-container {
-    @apply mx-auto w-full max-w-7xl px-4 pt-10;
+    @apply mx-auto min-h-screen w-full max-w-7xl px-4 pt-10;
   }
   .site-header {
     @apply mx-auto w-full max-w-prose space-y-4;
@@ -137,8 +137,11 @@
  * Custom utilities
  */
 @layer utilities {
+  .hover-opacity {
+    @apply transition hover:opacity-75;
+  }
   .focus-ring {
-    @apply focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 focus:ring-offset-background;
+    @apply focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background;
   }
   .prose-config {
     @apply prose prose-slate dark:prose-invert;
@@ -147,7 +150,8 @@
     @apply prose-h2:mt-2 prose-h2:font-semibold;
     @apply prose-h3:font-semibold;
     @apply prose-h4:font-semibold;
-    @apply prose-a:focus-ring prose-a:text-primary prose-a:no-underline;
+    @apply prose-a:focus-ring prose-a:hover-opacity;
+    @apply prose-a:text-primary prose-a:no-underline;
     @apply prose-pre:border prose-pre:border-input prose-pre:bg-muted prose-pre:text-foreground;
     @apply prose-code:before:content-none prose-code:after:content-none;
   }
