--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -82,7 +82,7 @@
     @apply text-3xl sm:text-4xl;
   }
   h3 {
-    @apply text-2xl sm:text-3xl;
+    @apply text-xl sm:text-2xl;
   }
   h4 {
     @apply text-lg sm:text-xl;
