feat: refine bg footer and prose pre

--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -150,7 +150,7 @@
     @apply prose-h4:font-semibold;
     @apply prose-a:focus-ring prose-a:hover-opacity;
     @apply prose-a:text-primary prose-a:no-underline;
-    @apply prose-pre:border prose-pre:border-input prose-pre:bg-muted prose-pre:text-foreground;
+    @apply prose-pre:bg-muted prose-pre:text-foreground;
     @apply prose-code:before:content-none prose-code:after:content-none;
   }
   .prose > ul > li > p {
