--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -166,3 +166,8 @@
     @apply my-0;
   }
 }
+
+.tiptap p.is-empty::before {
+  @apply pointer-events-none float-left h-0 text-muted-foreground/30;
+  content: attr(data-placeholder);
+}
